--- a/main.html
+++ b/main.html
@@ -8,23 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="container">
-		<div class="third" id="third"><h1>3</h1></div>
-		<div class="first"><h1>1</h1></div>
-		<div class="second" id="second"><h1>2</h1></div>
+	<div class="holder">
+		<div class="item" ><h1>3</h1></div>
+		<div class="item"><h1>1</h1></div>
+		<div class="item" ><h1>2</h1></div>
 	</div>
-	</br>
 	
-	<div class="container-1">
-		<div class="third" id="third"><h1>3</h1></div>
-		<div class="first"><h1>1</h1></div>
-		<div class="second" id="second"><h1>2</h1></div>
-		<div class="third" id="third"><h1>3</h1></div>
-		<div class="first"><h1>1</h1></div>
-		<div class="second" id="second"><h1>2</h1></div>
-		<div class="first"><h1>1</h1></div>
-		<div class="second" id="second"><h1>2</h1></div>
-	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
